--- a/src/components/layout/Navigation.astro
+++ b/src/components/layout/Navigation.astro
@@ -17,8 +17,8 @@ const menu = {
     dropdown: [{ name: "All Posts", path: "/blog/posts/" }],
   },
   home: { name: "Home", path: "/#home" },
-  experience: { name: "Experience", path: "/#experience" },
-  projects: { name: "Projects", path: "/#projects" },
+  experience: { name: "Experience", path: "/about-me#experience" },
+  projects: { name: "Knowledge Sharing", path: "/#projects" },
 };
 
 // Common base classes
