--- a/src/layouts/MarkdownAbout.astro
+++ b/src/layouts/MarkdownAbout.astro
@@ -1,11 +1,9 @@
 ---
 import Layout from "./Layout.astro";
-import { Icon } from "astro-icon/components";
 import Heading from "../components/ui/Heading.astro";
-import Experience from "../components/portfolio/Experience.astro";
-import NavArticle from "../components/layout/NavArticle.astro";
 import Contact from "../components/portfolio/Contact.astro";
-import Tools from "../components/portfolio/Tools.astro";
+import Button from "../components/ui/Button.astro";
+import Experience from "../components/portfolio/Experience.astro";
 const { frontmatter } = Astro.props;
 ---
 
@@ -25,7 +23,6 @@ const { frontmatter } = Astro.props;
   <section
     class="w-full px-8 mt-5 max-sm:px-4 py-4 flex flex-row justify-center gap-6"
   >
-    <div class="w-64 max-xl:hidden"></div>
 
     <article
       class="flex flex-col gap-8 max-w-3xl max-md:w-full pb-10 pt-8 mt-8 max-sm:mt-0 px-14 max-md:px-10 max-sm:px-6 dark:bg-transparent bg-white dark:border-0 border border-neutral-100 rounded-2xl"
@@ -44,11 +41,11 @@ const { frontmatter } = Astro.props;
               </div>
               <div class="relative z-20 flex w-full rounded-full bg-mint-900">
                 <div
-                  class="w-full aspect-square rounded-full bg-[url(/images/efeeleprofile.webp)] bg-center bg-cover"
+                  class="w-full aspect-square rounded-full bg-[url(./images/portrait.jpg)] bg-center bg-cover"
                   aria-label="Photo of Fernando Aldair López Ponce (EFEELE) for the blog"
                 >
                   <a
-                    href="/about-me"
+                    href="./about-me"
                     class="flex h-full w-full"
                     aria-label="View about me page"></a>
                 </div>
@@ -58,21 +55,8 @@ const { frontmatter } = Astro.props;
 
           <div class="w-full flex flex-col justify-center gap-4 max-md:gap-2">
             <div class="text-center">
-              <Heading textGradient="Fernando López | EFEELE" />
+              <Heading textGradient="Aleksandra Bielak" />
             </div>
-
-            <p
-              class="text-lg max-xl:text-base text-blacktext dark:text-gray-200 mb-0 leading-8 font-semibold"
-            >
-              <b
-                class="bg-linear-to-r from-riptide-400 to-mint-500 dark:to-mint-200 dark:from-riptide-300 text-transparent bg-clip-text"
-                >Frontend Developer</b
-              > with <b
-                class="bg-linear-to-r from-riptide-400 to-mint-500 dark:to-mint-200 dark:from-riptide-300 text-transparent bg-clip-text"
-                >8 years of experience</b
-              >, passionate about development, technology, and coffee that
-              sparks ideas. I love bringing digital projects to life. 🚀☕
-            </p>
           </div>
         </div>
       </div>
@@ -83,27 +67,18 @@ const { frontmatter } = Astro.props;
       <div class="markdown text-white" id="content">
         <slot />
       </div>
+        <div class="flex gap-4 justify-center items-center">
+        <Button
+                link={'./files/Aleksandra_Bielak_CV.pdf'}
+                text="Download my resume"
+                iconName="person"
+                variant="dark"
+                isExternal
+        />
+        </div>
     </article>
-    <NavArticle title={frontmatter.title} />
   </section>
-  <section class="py-8 px-8 max-md:py-4 mb-4 scroll-m-16" id="experience">
-    <div class="flex flex-col gap-8 pt-8 max-w-4xl mx-auto">
-      <div class="flex gap-4 items-center justify-center">
-        <Icon class="text-3xl text-white" name="briefcase" />
-        <Heading text="Experience" textGradient="Work" level={2} />
-      </div>
 
-      <Experience />
-    </div>
-  </section>
-  <section class="py-8 px-8 max-md:py-4 mt-10 mb-20 scroll-m-16" id="sttack">
-    <div class="flex flex-col gap-8 max-w-3xl justify-center mx-auto">
-      <div class="flex gap-4 items-center justify-center">
-        <Icon class="text-3xl text-white" name="dashboard" />
-        <Heading text="Stack" textGradient="Technological" level={2} />
-      </div>
-      <Tools variant="center" />
-    </div>
-  </section>
+    <Experience />
   <Contact />
 </Layout>
