--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ import { Icon } from "astro-icon/components";
     description="The page you requested could not be found."
 >
     <main
-        class="flex flex-col items-center justify-center min-h-[calc(100vh-200px)] text-blacktext dark:text-gray-200 py-8 md:py-16 px-4 text-center font-montserrat"
+        class="flex flex-col items-center justify-center min-h-[calc(100vh-200px)] text-blacktext dark:text-gray-200 py-8 md:py-16 px-4 text-center font-roboto"
     >
         <h1
             class="text-9xl font-bold mb-8 tracking-wider bg-clip-text text-transparent bg-gradient-to-r from-mint-500 to-riptide-500 max-sm:text-7xl"
