--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -9,10 +9,8 @@ const {
   alias,
   instagram,
   email,
-  youtube,
   linkedin,
   emailIconName,
-  youtubeIconName,
   linkedinIconName,
   instagramIconName,
   githubIconName,
@@ -29,11 +27,15 @@ const {
     aria-label="Footer navigation"
   >
     <div
-      class="relative h-6 cursor-pointer before:absolute before:left-1/2 before:top-1/2 before:h-full before:w-[40%] before:-translate-x-1/2 before:-translate-y-1/2 before:rounded-full before:bg-[#50fd8f25] before:blur-3xl before:opacity-80 before:-z-1 hover:text-mint-500 transition-all [text-shadow:0_1px_2px_#000]"
+      class="relative h-12 cursor-pointer before:absolute before:left-1/2 before:top-1/2 before:h-full before:w-[40%] before:-translate-x-1/2 before:-translate-y-1/2 before:rounded-full before:bg-[#50fd8f25] before:blur-3xl before:opacity-80 before:-z-1 hover:text-mint-500 transition-all [text-shadow:0_1px_2px_#000]"
     >
-      <a href="/" aria-label="Return to homepage">
-        <!-- This icon represents the logo -->
-        <Icon name="logo" aria-hidden="true" />
+      <a href="./" aria-label="Return to homepage">
+          <img
+                  src="./images/Bielak.dev.png"
+                  alt="logo"
+                  class="h-12 cursor-pointer transition-all hover:text-mint-300"
+                  aria-hidden="true"
+          />
       </a>
     </div>
     <div class="text-center">
@@ -44,7 +46,8 @@ const {
         ><Icon name="code" aria-hidden="true" /> Developed by <strong
           >{alias}</strong
         >, with Astro</a
-      >
+      > <span
+            class="flex items-center justify-center gap-3 text-base font-normal italic max-sm:text-sm"> Based on <a href="https://github.com/EFEELE/NeonMint" >NeonMint</a> by <a href="https://github.com/EFEELE">EFEELE</a></span>
     </div>
     <div
       class="flex items-center justify-center gap-5"
@@ -60,11 +63,6 @@ const {
         link={instagram}
         iconName={instagramIconName}
         label={`Visit ${alias} on Instagram`}
-      />
-      <Social
-        link={youtube}
-        iconName={youtubeIconName}
-        label={`Visit ${alias} on YouTube`}
       />
       <Social
         link={github}
