--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -15,8 +15,8 @@ const routes = ["/", "/portfolio", "/about-me"];
 const isActiveRoute = routes.includes(currentPath);
 
 const navItems = isActiveRoute
-  ? ["home", "experience", "projects", "about", "blog"]
-  : ["home", "blog", "about"]; // Change the items
+  ? ["home", "about"]
+  : ["home", "about"];
 ---
 
 <header
@@ -27,10 +27,11 @@ const navItems = isActiveRoute
   <div
     class="relative mx-auto flex max-w-7xl flex-row items-center justify-between max-xl:px-6"
   >
-    <a href="/" aria-label="Go to home">
-      <Icon
-        name="logo"
-        class="h-6 cursor-pointer transition-all hover:text-mint-300"
+    <a href="./" aria-label="Go to home">
+      <img
+        src="./images/Bielak.dev.png"
+        alt="logo"
+        class="w-64 cursor-pointer transition-all hover:text-mint-300"
         aria-hidden="true"
       />
     </a>
