--- a/src/components/portfolio/ExperienceItem.astro
+++ b/src/components/portfolio/ExperienceItem.astro
@@ -2,7 +2,7 @@
 interface Props {
   title: string;
   company: string;
-  description: string;
+  description: string[];
   link?: string;
   date: string;
 }
@@ -36,6 +36,10 @@ const { title, company, description, link, date } = Astro.props;
   <div
     class="flex flex-col gap-2 pb-4 text-zinc-00 dark:text-zinc-300 md:col-span-3"
   >
-    {description}
+      <ul>
+          {description.map((item) => (
+              <li class="list-disc">{item}</li>
+          ))}
+      </ul>
   </div>
 </div>
