--- a/src/components/portfolio/Hobbies.astro
+++ b/src/components/portfolio/Hobbies.astro
@@ -21,5 +21,5 @@ const classes = variants[variant];
 ---
 
 <div id="tags" class={classes}>
-    {staticData.data.hobbies.map((hobby) => <Hobbie tag={hobby} />)}
+    <span class="text-lg font-extrabold text-white">My hobbies:</span>{staticData.data.hobbies.map((hobby) => <Hobbie tag={hobby} />)}
 </div>
