--- a/src/components/portfolio/ListProjects.astro
+++ b/src/components/portfolio/ListProjects.astro
@@ -2,15 +2,13 @@
 import Project from "./Project.astro";
 import Heading from "../ui/Heading.astro";
 import { Icon } from "astro-icon/components";
+import {postListSchema} from "../blog/post.types.ts";
 
-const allPosts = await Astro.glob("../../pages/portfolio/projects/*.md");
-
-// Sort by descending date (most recent first)
-allPosts.sort(
-  (a, b) =>
-    new Date(b.frontmatter.pubDate).getTime() -
-    new Date(a.frontmatter.pubDate).getTime(),
-);
+const response = await fetch("https://dev.to/api/articles?username=vakme");
+const body = await response.json();
+const parsedResponse = postListSchema.safeParse(body);
+const data = parsedResponse.success ? parsedResponse.data : [];
+const allPosts = [...data];
 ---
 
 <section
@@ -19,26 +17,9 @@ allPosts.sort(
 >
   <div class="mx-auto max-w-7xl py-8">
     <div class="flex gap-4 items-center justify-center text-center">
-      <Icon class="text-3xl dark:text-white text-blacktext" name="code" />
-      <Heading text="Projects" textGradient="Completed" level={2} />
+      <Icon class="text-3xl dark:text-white text-blacktext" name="dashboard" />
+      <Heading text="Knowledge" textGradient="Sharing" level={2} />
     </div>
-
-    <p
-      class="z-2 text-center mx-auto text-lg max-xl:text-base max-w-2xl dark:text-gray-200 text-blacktext my-6 leading-6 font-medium"
-    >
-      I love <b
-        class="bg-linear-to-r from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
-        >turning ideas into real projects.</b
-      >
-      <br /> Here I show you some of the <b
-        class="bg-linear-to-r from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
-        >developments</b
-      > I've worked on, applying technology, design, and lots of creativity.
-      <b
-        class="bg-linear-to-r from-riptide-500 to-mint-500 dark:from-riptide-300 dark:to-mint-200 text-transparent bg-clip-text"
-        >Check them out!</b
-      >
-    </p>
     <slot />
   </div>
 
@@ -50,26 +31,31 @@ allPosts.sort(
       allPosts.map((post) => (
         <Project
           url={post.url}
-          title={post.frontmatter.title}
-          description={post.frontmatter.description}
-          date={post.frontmatter.pubDate}
-          languages={post.frontmatter.languages}
-          image={post.frontmatter.image}
+          title={post.title}
+          description={post.description}
+          date={post.published_at}
+          languages={post.tag_list}
+          source={post.source}
+          image={{
+              url: post.social_image,
+              alt: post.title,
+          }}
         />
       ))
     }
   </div>
 
-  <div
-    id="moreProjects"
-    class="absolute bottom-0 left-0 w-full flex justify-center text-center bg-linear-to-t from-[#FBFEFD] dark:from-[#0e0e10] from-55% to-transparent to-100% pb-30 pt-52"
-  >
-    <button
-      class="absolute font-bold cursor-pointer text-mint-400 dark:text-mint-100 hover:text-mint-500 dark:hover:text-mint-300 transition-all"
+    {allPosts.length > 3 && (
+            <div
+            id="moreProjects"
+            class="absolute bottom-0 left-0 w-full flex justify-center text-center bg-linear-to-t from-[#FBFEFD] dark:from-[#0e0e10] from-55% to-transparent to-100% pb-30 pt-52"
     >
-      View More Projects...
-    </button>
-  </div>
+        <button
+                class="absolute font-bold cursor-pointer text-mint-400 dark:text-mint-100 hover:text-mint-500 dark:hover:text-mint-300 transition-all"
+        >
+            View More Projects...
+        </button>
+    </div>)}
 </section>
 
 <script>
