--- a/src/components/ui/Capsule.astro
+++ b/src/components/ui/Capsule.astro
@@ -15,7 +15,7 @@ const baseClasses = {
     "flex items-center w-fit",
     "pl-2 pr-2 py-0.5 gap-1",
     "text-sm font-semibold leading-3",
-    "bg-white shadow rounded-full",
+    "bg-black shadow rounded-full text-white",
     "transition-all duration-300 ease-in-out hover:bg-zinc-800 hover:text-white",
     "max-sm:pl-1 max-sm:pr-1.5 max-sm:text-xs max-sm:gap-0.5",
   ].join(" "),
@@ -58,13 +58,14 @@ const getIconContainerClasses = () => {
         role="presentation"
         aria-hidden="true"
       >
-        <div
-          class={getIconContainerClasses()}
-          role="img"
-          aria-label={`${selectedLanguage.name} icon`}
+        {selectedLanguage.iconName && (
+                <div
+                class={getIconContainerClasses()}
+                role="img"
+                aria-label={`${selectedLanguage.name} icon`}
         >
-          <Icon class="w-full!" name={selectedLanguage.iconName} />
-        </div>
+            <Icon class="w-full!" name={selectedLanguage.iconName} />
+        </div>)}
         {selectedLanguage.name}
       </span>
     </a>
@@ -74,13 +75,13 @@ const getIconContainerClasses = () => {
       role="presentation"
       aria-hidden="true"
     >
-      <div
-        class={getIconContainerClasses()}
-        role="img"
-        aria-label={`${selectedLanguage.name} icon`}
+      {selectedLanguage.iconName && (<div
+              class={getIconContainerClasses()}
+              role="img"
+              aria-label={`${selectedLanguage.name} icon`}
       >
-        <Icon class="w-full!" name={selectedLanguage.iconName} />
-      </div>
+          <Icon class="w-full!" name={selectedLanguage.iconName} />
+      </div>)}
       {selectedLanguage.name}
     </span>
   )
