--- a/src/components/ui/Heading.astro
+++ b/src/components/ui/Heading.astro
@@ -2,7 +2,7 @@
 interface Props {
     text?: string;
     textGradient?: string;
-    level?: 1 | 2 | 3;
+    level?: 1 | 2 | 3 | 4;
     className?: string;
 }
 
@@ -12,10 +12,12 @@ const Tag = `h${level}`;
 ---
 
 <Tag class:list={[
-    "font-extrabold text-4xl max-xl:text-3xl",
+    "font-extrabold text-4xl max-xl:text-2xl",
     level === 2 && "max-md:text-3xl ",
-    level === 3 && "max-md:text-xl ",
+    level === 3 && "max-md:text-2xl ",
+    level === 4 && "max-md:text-xl ",
     "dark:text-white text-blacktext",
+    "font-queensides-bold",
     className
 ]}>
     {text && (
