--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,37 +1,76 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 @import 'tailwindcss';
+
+@font-face {
+    font-family: 'QueensidesBold';
+    src: url('./fonts/Queensides Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+@font-face {
+    font-family: 'QueensidesLight';
+    src: url('./fonts/Queensides Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+@font-face {
+    font-family: 'QueensidesMedium';
+    src: url('/fonts/Queensides Medium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
+@font-face {
+    font-family: 'QueensidesRegular';
+    src: url('/fonts/Queensides Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
-  --font-montserrat: 'Montserrat', sans-serif;
   --font-roboto: 'Roboto', sans-serif;
-  --font-opensans: 'Open Sans', sans-serif;
+  --font-roboto-mono: 'Roboto Mono', monospace;
+  --font-queensides-medium: 'QueensidesMedium', sans-serif;
+  --font-queensides-bold: 'QueensidesBold', sans-serif;
+  --font-queensides-light: 'QueensidesLight', sans-serif;
+  --font-queensides: 'QueensidesRegular', sans-serif;
   --color-blacktext: #171717;
-  --color-mint-50: #ecfdf5;
-  --color-mint-100: #d0fbe5;
-  --color-mint-200: #a4f4cf;
-  --color-mint-300: #6ce9b7;
-  --color-mint-400: #31d69a;
-  --color-mint-500: #0dbc82;
-  --color-mint-600: #03986a;
-  --color-mint-700: #027a58;
-  --color-mint-800: #056047;
-  --color-mint-900: #054f3c;
-  --color-mint-950: #012d22;
+    --color-mint-50:  #f4eef7;
+    --color-mint-100: #e4d6ee;
+    --color-mint-200: #c9aedd;
+    --color-mint-300: #ab89ca;
+    --color-mint-400: #8d6bb2;
+    --color-mint-500: #7c6685; /* from image */
+    --color-mint-600: #664d72; /* from image */
+    --color-mint-700: #5f3d6e; /* from image */
+    --color-mint-800: #4d2f5b;
+    --color-mint-900: #3a2345;
+    --color-mint-950: #28162e;
 
-  --color-riptide-50: #f0fdfa;
-  --color-riptide-100: #cbfcf1;
-  --color-riptide-200: #96f7e4;
-  --color-riptide-300: #5cecd5;
-  --color-riptide-400: #2bd6c1;
-  --color-riptide-500: #12baa8;
-  --color-riptide-600: #0b9689;
-  --color-riptide-700: #0e776f;
-  --color-riptide-800: #105f5a;
-  --color-riptide-900: #124f4b;
-  --color-riptide-950: #03302f;
+    --color-riptide-50:  #f2f4fb;
+    --color-riptide-100: #e0e5f7;
+    --color-riptide-200: #c2c8ef;
+    --color-riptide-300: #9ea3e2;
+    --color-riptide-400: #7b7ed2;
+    --color-riptide-500: #6363be;
+    --color-riptide-600: #504fa5;
+    --color-riptide-700: #45448b;
+    --color-riptide-800: #3c3a72;
+    --color-riptide-900: #322f5a;
+    --color-riptide-950: #1e1a38;
 
   --animate-rotate: rotate 10s linear infinite;
 
@@ -56,16 +95,16 @@
 *::-webkit-scrollbar-thumb{
 	border-radius: 20px;
 }
-.dark *{
-	scrollbar-color: #6ce9b7 #012d22;
-	scrollbar-width: thin;
-}
- *{
-	scrollbar-color: #6ce9b7 #d0fbe5;
-	scrollbar-width: thin;
-	box-sizing: border-box;
+.dark * {
+    scrollbar-color: #7b7ed2 #1e1a38; /* blue scrollbar thumb on dark purple track */
+    scrollbar-width: thin;
 }
 
+* {
+    scrollbar-color: #7b7ed2 #e0e5f7; /* blue thumb on light indigo track */
+    scrollbar-width: thin;
+    box-sizing: border-box;
+}
 
 pre, .dark pre {
 	scrollbar-color: #686868 #424242;
@@ -88,6 +127,11 @@ a.inline-block.leading-5.pl-12{
 #toc-list a[href="#"]{
 	@apply  font-bold dark:text-white text-blacktext;
 }
+
+h1 {
+    font-family: 'QueensidesBold', sans-serif;
+}
+
 .markdown h2 {
 	@apply dark:text-white text-blacktext  text-3xl font-bold  mt-16 mb-10;
 }
@@ -106,7 +150,7 @@ a.inline-block.leading-5.pl-12{
 
 
 .markdown p {
-	@apply tracking-normal font-montserrat text-pretty text-xl max-md:text-lg text-blacktext dark:text-gray-200 mb-8 leading-8;
+	@apply tracking-normal font-roboto text-pretty text-xl max-md:text-lg text-blacktext dark:text-gray-200 mb-8 leading-8;
 }
 
 .markdown a {
@@ -230,46 +274,44 @@ a.inline-block.leading-5.pl-12{
 }
 
 
+/* --- BLUR CIRCLE EFFECTS --- */
 .blur-circle::after {
-	content: "";
-	display: block;
-	width: 400px;
-	height: 400px;
-	background: #31d69a40;
-	bottom: -400px;
-	right: -300px;
-	position: fixed;
-	z-index: -1;
-	border-radius: 50%;
-	filter: blur(159px);
-
+    content: "";
+    display: block;
+    width: 400px;
+    height: 400px;
+    background: #7b7ed240; /* translucent indigo-blue */
+    bottom: -400px;
+    right: -300px;
+    position: fixed;
+    z-index: -1;
+    border-radius: 50%;
+    filter: blur(159px);
 }
 
-
 .blur-circle {
-	background-color: rgba(87, 253, 228, 0.29);
-	position: absolute;
-	width: 200px;
-	height: 200px;
-	top: 100px;
-	right: 100px;
-	border-radius: 999px;
-	filter: blur(150px);
-	overflow: hidden;
-	z-index: -1;
+    background-color: rgba(123, 126, 210, 0.29); /* same hue as #7b7ed2 with alpha */
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    top: 100px;
+    right: 100px;
+    border-radius: 999px;
+    filter: blur(150px);
+    overflow: hidden;
+    z-index: -1;
 }
 
 .dark .blur-circle::after {
-	content: "";
-	display: block;
-	width: 500px;
-	height: 500px;
-	background: #50fd8f25 !important;
-	bottom: -150px;
-	right: -150px;
-	position: absolute;
-	z-index: -1;
-	border-radius: 50%;
-	filter: blur(10px);
-
+    content: "";
+    display: block;
+    width: 500px;
+    height: 500px;
+    background: #6363be25 !important; /* slightly deeper indigo for dark mode */
+    bottom: -150px;
+    right: -150px;
+    position: absolute;
+    z-index: -1;
+    border-radius: 50%;
+    filter: blur(10px);
 }
