--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -27,9 +27,9 @@ const navItems = isActiveRoute
   <div
     class="relative mx-auto flex max-w-7xl flex-row items-center justify-between max-xl:px-6"
   >
-    <a href="./" aria-label="Go to home">
+    <a href="/" aria-label="Go to home">
       <img
-        src="./images/Bielak.dev.png"
+        src="/images/Bielak.dev.png"
         alt="logo"
         class="w-64 cursor-pointer transition-all hover:text-mint-300"
         aria-hidden="true"
