--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ const {
   pageTitle = "NeonMint by EFEELE 🚀",
   description = "Welcome to NeonMint by EFEELE, where I develop software and share knowledge.",
   ogimage = {
-    url: "./images/imagedefault.webp",
+    url: "/images/imagedefault.webp",
     alt: "Default image of EFEELE",
   },
 } = Astro.props;
