--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -29,9 +29,9 @@ const {
     <div
       class="relative h-12 cursor-pointer before:absolute before:left-1/2 before:top-1/2 before:h-full before:w-[40%] before:-translate-x-1/2 before:-translate-y-1/2 before:rounded-full before:bg-[#50fd8f25] before:blur-3xl before:opacity-80 before:-z-1 hover:text-mint-500 transition-all [text-shadow:0_1px_2px_#000]"
     >
-      <a href="./" aria-label="Return to homepage">
+      <a href="/" aria-label="Return to homepage">
           <img
-                  src="./images/Bielak.dev.png"
+                  src="/images/Bielak.dev.png"
                   alt="logo"
                   class="h-12 cursor-pointer transition-all hover:text-mint-300"
                   aria-hidden="true"
