--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -38,16 +38,16 @@ const {
           />
       </a>
     </div>
-    <div class="text-center">
+    <div class="text-center flex gap-1">
       <a
         href={github}
-        class="flex items-center justify-center gap-3 text-base font-normal italic max-sm:text-sm"
+        class="flex items-center justify-center gap-1 text-base font-normal max-sm:text-sm"
         aria-label="About the website development"
         ><Icon name="code" aria-hidden="true" /> Developed by <strong
-          >{alias}</strong
-        >, with Astro</a
+          >{alias},</strong
+        > with Astro</a
       > <span
-            class="flex items-center justify-center gap-3 text-base font-normal italic max-sm:text-sm"> Based on <a href="https://github.com/EFEELE/NeonMint" >NeonMint</a> by <a href="https://github.com/EFEELE">EFEELE</a></span>
+            class="flex items-center justify-center gap-1 text-base font-normal max-sm:text-sm"> | Based on <a href="https://github.com/EFEELE/NeonMint" >NeonMint</a> by <a href="https://github.com/EFEELE">EFEELE</a></span>
     </div>
     <div
       class="flex items-center justify-center gap-5"
