--- a/src/components/ui/Howdy.astro
+++ b/src/components/ui/Howdy.astro
@@ -2,7 +2,7 @@
 import HowdySvg from './../../icons/howdy.svg?raw'
 ---
 
-<div class="md:size-1/2 flex items-start justify-start">
+<div class="md:size-1/2 flex items-start justify-start text-zinc-600 dark:text-white">
 <Fragment set:html={HowdySvg} />
 </div>
 
