feat: logo dark mode

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -31,9 +31,15 @@ const {
     >
       <a href="/" aria-label="Return to homepage">
           <img
+                  src="/images/Bielak.dev_light.png"
+                  alt="logo"
+                  class="h-12 cursor-pointer transition-all hover:text-mint-300 dark:hidden"
+                  aria-hidden="true"
+          />
+          <img
                   src="/images/Bielak.dev.png"
                   alt="logo"
-                  class="h-12 cursor-pointer transition-all hover:text-mint-300"
+                  class="h-12 cursor-pointer transition-all hover:text-mint-300 hidden dark:block"
                   aria-hidden="true"
           />
       </a>
