--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -29,9 +29,15 @@ const navItems = isActiveRoute
   >
     <a href="/" aria-label="Go to home">
       <img
+        src="/images/Bielak.dev_light.png"
+        alt="logo"
+        class="w-64 cursor-pointer transition-all hover:text-mint-300 dark:hidden"
+        aria-hidden="true"
+      />
+        <img
         src="/images/Bielak.dev.png"
         alt="logo"
-        class="w-64 cursor-pointer transition-all hover:text-mint-300"
+        class="w-64 cursor-pointer transition-all hover:text-mint-300 hidden dark:block"
         aria-hidden="true"
       />
     </a>
