--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -44,7 +44,7 @@ const {
           />
       </a>
     </div>
-    <div class="text-center flex gap-1">
+    <div class="text-center flex gap-1 flex-wrap justify-center">
       <a
         href={github}
         class="flex items-center justify-center gap-1 text-base font-normal max-sm:text-sm"
